--- a/templates/story_list.html
+++ b/templates/story_list.html
@@ -141,7 +141,9 @@
                                            font-weight: 800; 
                                            line-height: 1.3;
                                            text-align: center;
-                                           width: 100%;">
+                                           width: 100%;
+                                           direction: rtl !important;
+                                           font-family: 'Faruma', 'Noto Sans Dhivehi', Arial, serif !important;">
                     {{ story.title }}
                 </h2>
                 
@@ -236,10 +238,11 @@
                                              color: #555; 
                                              font-weight: 500; 
                                              text-align: center; 
-                                             font-family: 'Faruma', 'Georgia', serif !important;
+                                             font-family: 'Faruma', 'Noto Sans Dhivehi', Arial, serif !important;
                                              margin: 0;
                                              max-width: 90%;
-                                             margin: 0 auto;">
+                                             margin: 0 auto;
+                                             direction: rtl !important;">
                         {{ story.description|truncatewords:20 }}
                     </p>
                 </div>
