--- a/templates/story_list.html
+++ b/templates/story_list.html
@@ -267,16 +267,7 @@
                 
                 <!-- Beautiful Story Description -->
                 <div style="margin-bottom: 2.5em; position: relative;">
-                    <p class="faruma" style="font-size: 1.2em; 
-                                             line-height: 1.8; 
-                                             color: #555; 
-                                             font-weight: 500; 
-                                             text-align: center; 
-                                             font-family: 'Faruma', 'Noto Sans Dhivehi', Arial, serif !important;
-                                             margin: 0;
-                                             max-width: 90%;
-                                             margin: 0 auto;
-                                             direction: rtl !important;">
+                    <p class="story-description faruma" style="color: var(--text-secondary); line-height: 1.6; margin-bottom: 2rem; font-family: 'Faruma', 'Noto Sans Dhivehi', Arial, serif !important; direction: rtl !important; text-align: right;">
                         {{ story.description|truncatewords:20 }}
                     </p>
                 </div>
